# influence-rlvr

./: .gitignore  README.md  attribution_math.py  grpo_gradients.py  main.ipynb  main_pipeline.py  main_pipeline_sft_compare.py  main_pipeline_smoke.py  pyproject.toml  rewards.py  training_script.py  visualize.py
analysis/: __init__.py  analyzer.py  cli.py  loader.py  plots.py  schema.py
influence_rlvr/: __init__.py  checkpoint_schedule.py  eval.py  eval_stats.py  generation.py  gradients.py  modes.py  prompts.py  rewards.py  rollout_cache.py  taco_convert.py  toy_grpo.py  training.py  training_data.py  trajectory.py  utils.py
influence_rlvr/attribution/: __init__.py  base.py  datainf.py  fisher.py  pbrf.py  repsim.py  tracin.py
rlvr-mac-sandbox/: README.md
rlvr-mac-sandbox/checkpoint-10/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
scripts/: build_if_perturbation_benchmark.py  compare_gsm8k_eval.py  coverage_checkpoint_union.py  eval_mixed_training_and_if_sets.py  if_hypothetical_thinned_union.py  if_per_sample_checkpoint_coverage.py  inspect_benchmark_generation.py  probe_code_max_new_tokens.py  probe_max_new_tokens.py  toy_grpo_if_sandbox.py
tests/: test_eval_stats.py  test_fisher_influence.py  test_generation_backends.py  test_gradient_objectives.py  test_mixed_datasets.py  test_rewards.py  test_toy_grpo_if.py  test_training_helpers.py
