[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "influence-rlvr"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "transformers>=4.56,<5",
    "peft>=0.14",
    "trl>=0.17",
    "datasets>=3.0",
    "accelerate>=1.0",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "requests>=2.32.5",
]

[project.optional-dependencies]
vllm = [
    "vllm==0.11.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
torchaudio = { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }

[tool.setuptools.packages.find]
where = ["."]
include = ["influence_rlvr*", "analysis*"]
